--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1078,11 +1078,15 @@
         @include md{
             padding: 40px 24px;
             .explore_btn{
-                display: none;
+                 
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
             }
         }
         @include sm{
-            padding: 30px 20px;
+            padding: 30px 20px 60px 20px;
             
         }
         @include border-radius(24px);
